--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.3",
     "@tanstack/react-router": "^1.105.0",
+    "@types/swiper": "^6.0.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,6 +35,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
